# unknown-gen

./: README.md  dev.py  main.py  pyproject.toml  requirements.txt  unknown-gen.icns
src/: GUI.py  __main__.py  gene_table.py  generator.py
src/app/: app.py
src/controller/: controller.py  generator.py
src/frame/: frame.py
src/palette/: palette.py
src/ui/frame/: frame.py
src/ui/menu/: menu.py
src/ui/palette/: palette.py
