[project]
name = "unknown-gen"
version = "0.1.0"
description = "GUI app to generate excel files containing combinations of bacteria."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altgraph==0.17.4",
    "et-xmlfile==2.0.0",
    "macholib==1.16.3",
    "numpy==2.3.4",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pyinstaller==6.16.0",
    "pyinstaller-hooks-contrib==2025.9",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "tzdata==2025.2",
    "xlsxwriter==3.2.9",
]
